--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>NATALYA PANASENKO - WEB DESIGNER FROM KYIV</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/CSSRulePlugin.js"></script>
